<resources>
    <string name="app_name">SuperFit</string>
    <string name="username">UserName</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="repeat_code">Repeat Code</string>
    <string name="super_fit">SuperFit</string>
    <string name="details">Details</string>
    <string name="last_exercises">Last exercises</string>
    <string name="see_all">See all</string>
    <string name="plank">Plank</string>
    <string name="recipes">Recipes</string>
    <string name="sign_out">Sign out</string>
    <string name="exercises">Exercises</string>
    <string name="squats">Squats</string>
    <string name="crunch">Crunch</string>
    <string name="running">Running</string>
    <string name="search">Search</string>
    <string name="my_body">My body</string>
    <string name="balanced">Balanced</string>
    <string name="high_protein">High-Protein</string>
    <string name="recipe">Recipe</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="HF">High-Fiber</string>
    <string name="PU">Push_Ups</string>
    <string name="tf">35</string>
    <string name="PUbl">Push-ups exercise the pectoral muscles, triceps, and anterior deltoids</string>
    <string name="TP">The plank strengthens the abdominals, back and shoulders.</string>
    <string name="SD">Сonsidered a vital exercise for increasing the strength and size of the lower body.</string>
    <string name="CD">It involves the entire abs, but primarily it works the rectus abdominis muscle.</string>
    <string name="AD">It develops endurance, strengthens the legs and the cardiovascular system.</string>
    <string name="TL">TIMES LEFT</string>
    <string name="F">Finish</string>
</resources>