<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".AuthActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="63sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/authUN"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="372dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:hint="@string/username"
        android:autofillHints="username"
        android:text=""
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginSI"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="432dp"
        android:textAlignment="center"
        android:text="@string/sign_in"
        app:drawableRightCompat="@drawable/ic_uil_arrow_right"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:drawableLeftCompat="@drawable/ic_uil_arrow_left"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>