<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RecipesActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recipes_header"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/app_name"
                android:onClick="onBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_uil_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/recipes"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:inputType="text"
            android:id="@+id/q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/search"
            android:autofillHints=""
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:textColor="#993C3C43"
            android:textColorHint="#993C3C43" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/balanced"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/recipes_button_filter_background"
                android:fontFamily="@font/montserrat_light"
                android:minHeight="0dp"
                android:padding="5dp"
                android:textAllCaps="false"
                android:checked="true"
                android:textColor="@color/recipes_button_filter_text_color"
                android:textOff="@string/balanced"
                android:textOn="@string/balanced"
                android:textSize="12sp" />

            <FrameLayout
                android:clipChildren="true"
                android:background="@drawable/recipes_button_filter_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/high_fiber"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/recipes_button_filter_background"
                android:fontFamily="@font/montserrat_light"
                android:minHeight="0dp"
                android:padding="5dp"
                android:textAllCaps="false"
                android:textColor="@color/recipes_button_filter_text_color"
                android:textOff="@string/HF"
                android:textOn="@string/HF"
                android:textSize="12sp" />

            <FrameLayout
                android:clipChildren="true"
                android:background="@drawable/recipes_button_filter_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/high_protein"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/recipes_button_filter_background"
                android:fontFamily="@font/montserrat_light"
                android:minHeight="0dp"
                android:padding="5dp"
                android:textAllCaps="false"
                android:textColor="@color/recipes_button_filter_text_color"
                android:textOff="@string/high_protein"
                android:textOn="@string/high_protein"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ProgressBar
        android:id="@+id/progress"
        android:indeterminateTint="@color/purple_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recipes"
        app:layout_constraintStart_toStartOf="@+id/recipes"
        app:layout_constraintTop_toTopOf="@+id/recipes" />
</androidx.constraintlayout.widget.ConstraintLayout>