<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Push_Ups">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/PU"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#FFFFFF"
                android:textSize="23sp" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                app:drawableStartCompat="@drawable/ic_elli"
                android:layout_marginVertical="80dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tf"
                android:layout_marginVertical="130dp"
                android:layout_marginStart="175dp"
                android:textColor="#FFFFFF"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/TL"
                android:layout_marginVertical="190dp"
                android:layout_marginStart="160dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"/>


        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="140dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="50sp"
                android:textColor="#FFFFFF"
                app:drawableStartCompat="@drawable/ic_rectangle" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:text="@string/F" />
        </FrameLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>